# py-env-doctor

./: .gitignore  PYPI.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/py_env_doctor/: cli.py
src/py_env_doctor/core/: __init__.py  advice.py  detect_layout.py  detect_pep668.py  detect_python.py  detect_shadowing.py  model.py
src/py_env_doctor/reports/: __init__.py  json_report.py  markdown_report.py  text_report.py
tests/: conftest.py  test_advice.py  test_detect_layout.py  test_detect_python.py  test_reports_and_cli.py
