[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "py-env-doctor"
version = "0.1.0"
description = "Diagnose Python environment issues and provide actionable fixes."
authors = [
  { name = "Akash" }
]
requires-python = ">=3.9"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["python", "environment", "pip", "venv", "conda", "diagnostics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent"
]
dependencies = [
  "typer>=0.12,<1.0",
  "tomli>=2; python_version < '3.11'"
]

[project.urls]
Homepage = "https://github.com/akashkokare2910/py-env-doctor"
Repository = "https://github.com/akashkokare2910/py-env-doctor"
Issues = "https://github.com/akashkokare2910/py-env-doctor/issues"

[project.scripts]
py-env-doctor = "py_env_doctor.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "coverage[toml]>=7.5",
  "build>=1.2",
  "twine>=5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py_env_doctor"]

[tool.hatch.build.targets.wheel.force-include]
"LICENSE" = "LICENSE"
"README.md" = "README.md"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/PYPI.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
pythonpath = ["src"]

